hw06/test/zm-hw6-classFunc-name-re-declaration1.fmj
public int main() { }

public class C0  {
        
    public int id(){
        return 0;
    }
    
    public int id(int a){ //error
        return 0;
    }
}

